# decentralization-manager

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  NOTICE  README.md  TODO.md  USER_GUIDE.md  build.rs  code-coverage.sh  config.example.toml  deny.toml  deploy-all.sh  docker-compose.yml  justfile  multi-package.yaml  network.example.toml  node.example.toml  notes.md  run-integration-tests.sh  start.sh  watch-logs.sh
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
configs/: config-1.toml  config-2.toml  config-3.toml
crates/common/: Cargo.toml
crates/common/src/: api.rs  canton_id.rs  lib.rs  types.rs
crates/decman/: Cargo.toml  build.rs
crates/decman-cli/: .env.example  .gitignore  Cargo.toml  config.toml.example
crates/decman-cli/src/: api.rs  app.rs  cli.rs  composer.rs  config.rs  logo.rs  main.rs  ui.rs
crates/decman/frontend/: .gitignore  index.html  package-lock.json  vite.config.ts
crates/decman/frontend/mocks/: credential-offers.json  governance_burn-requests.json  governance_confirmations__cbtc-network.json  governance_confirmations__governance-core.json  governance_confirmations__ibtc-admin.json  governance_known-members.json  governance_transfer-instructions.json  operator-info.json  packages.json  packages_compare-peers.json  packages_vetted.json  party-config.json
crates/decman/frontend/src/: App.tsx  api.ts  main.tsx  styles.ts  types.ts  useHiddenParties.ts
crates/decman/frontend/src/components/: AddPartyDialog.tsx  ChangeThresholdDialog.tsx  CopyableText.tsx  ExecuteDialog.tsx  FieldHelp.tsx  GovernanceSection.tsx  GrantRightsDialog.tsx  KickDialog.tsx  NetworkConfigAccordion.tsx  NodeConfigAccordion.tsx  NotificationsView.tsx  OnboardingDialog.tsx  PackagesPanel.tsx  PartyConfigDialog.tsx  PartyDetail.tsx
crates/decman/frontend/src/contexts/: AuthContextValue.ts  ThemeContext.tsx  ThemeContextValue.ts
crates/decman/migrations/: 000000_init.down.sql  000001_dec_party.down.sql  000003_pending_invitations.up.sql  000007_party_auth0.down.sql  000007_party_auth0.up.sql  000008_kick_invitation_fields.down.sql  000008_kick_invitation_fields.up.sql  000010_purge_chain_audit_noise.down.sql  000011_contracts_invitation_fields.down.sql  000011_contracts_invitation_fields.up.sql  000012_invitation_workflow_instance.up.sql  000013_concurrent_workflows.down.sql  000013_concurrent_workflows.up.sql  000014_peer_coordinator_instance.down.sql  000014_peer_coordinator_instance.up.sql  000015_add_party_invitation_fields.down.sql  000015_add_party_invitation_fields.up.sql
crates/decman/src/: cli.rs  config.rs  consts.rs  error.rs  lib.rs  main.rs  utils.rs
crates/decman/src/auth/: mock.rs  mod.rs  validator.rs
crates/decman/src/auth/validators/: common.rs  mock.rs  mod.rs
crates/decman/src/db/: crypto.rs  mod.rs  rows.rs  schema.rs  sqlite.rs
crates/decman/src/noise/: client.rs  mod.rs  server.rs
crates/decman/src/server/: audit.rs  health.rs  mod.rs  peer_status.rs  types.rs
crates/decman/src/server/handlers/: auth.rs  config.rs  governance.rs  invitations.rs  keys.rs  mod.rs  parties.rs  party_config.rs  workflows.rs
crates/decman/src/server/middleware/: auth.rs
crates/decman/src/workflow/: mod.rs  storage.rs  topology.rs
crates/decman/src/workflow/add_party/: config.rs  coordinator.rs  mod.rs  peer.rs
crates/decman/src/workflow/add_party/steps/: acs_sync.rs  clear_onboarding.rs  export_state.rs  generate_keys.rs  mod.rs
crates/decman/src/workflow/add_party/steps/proposals/: create.rs  mod.rs  sign.rs  submit.rs
crates/decman/src/workflow/change_threshold/: config.rs  coordinator.rs  mod.rs  peer.rs
crates/decman/src/workflow/change_threshold/steps/: export_state.rs  mod.rs
crates/decman/src/workflow/change_threshold/steps/proposals/: create.rs  mod.rs  sign.rs  submit.rs
crates/decman/src/workflow/contracts/: config.rs  coordinator.rs
crates/decman/src/workflow/contracts/steps/: execute.rs  sign.rs  upload_dars.rs
crates/decman/src/workflow/dars/: coordinator.rs  mod.rs
crates/decman/src/workflow/kick/: config.rs  coordinator.rs  mod.rs
crates/decman/src/workflow/kick/steps/: mod.rs
crates/decman/src/workflow/onboarding/: config.rs  coordinator.rs  mod.rs
crates/decman/src/workflow/onboarding/steps/: generate_keys.rs  mod.rs
crates/decman/src/workflow/onboarding/steps/proposals/: create.rs  submit.rs
crates/decman/tests/: governance_workflows.rs
crates/decman/tests/common/: chaos.rs  db.rs  types.rs
crates/decman/tests/common/phases/: add_party.rs  add_party_edge_cases.rs  concurrent_cross_workflows.rs  concurrent_sibling_cancel.rs  concurrent_sibling_decline.rs  deploy_gov_core.rs  distribute_dars.rs  generate_keys_idempotent.rs  invite_cap.rs  invite_survives_peer_restart.rs  kick.rs  mod.rs  restart_coordinator_resume.rs  restart_with_concurrent_kinds.rs  start_handler_conflict_409.rs
daml/: .gitignore  justfile  multi-package.yaml
dars/: cbtc-0.0.1.dar  cbtc-governance-0.0.1.dar
development/: docker-compose.yml
docs/: ADD_PARTY_REDEVELOPMENT.md  ARCHITECTURE.md  CANTON_PARTY_REPLICATION.md  CODE_OF_CONDUCT.md  CODING-STANDARDS.md  CONTRIBUTING.md  CUSTOM_DAML_TEMPLATES.md  DEPLOYMENT_GUIDE.md  GOVERNANCE_PLUGIN_ARCHITECTURE.md  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  NEXT-STEPS.md  NOISE_PROTOCOL_COMMUNICATION.md  SECURITY.md  SPEC_UPDATE_UTILITY_ONBOARDING.md  TESTING_ADD_PARTY.md  TODO.md  TOKEN_CUSTODY_INPUTS.md  TOKEN_ISSUANCE_IN_CANTON_VAULT.md  TOKEN_ISSUANCE_PLUGIN.md  TOKEN_MANAGEMENT_INPUTS.md  UI_INPUTS.md  USE_CASES.md  UTILITY_ONBOARDING_INPUTS.md  audit-acknowledgements.md  flowchart-with-comms.mmd  legacy-removal-checklist.md
e2e/: .env.example  README.md  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts
frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
integration-tests/: attestor-3-strikes-abort.sh  bring-up.sh  cancel-cascades-to-attestors.sh  common.sh  create-dec-party.sh  deploy-gov-core.sh  devnet.env.sh  dismiss-failed-cleans-artifacts.sh  distribute-dars.sh  env.sh  kick.sh  (+16 more)
(+462 files in other folders)
