[package]
name = "dec-party-manager"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
strip = "debuginfo"
codegen-units = 1
lto = true
panic = "unwind"

[dependencies]
actix-cors = { version = "0.7" }
actix-web = { version = "4" }
anyhow = { version = "1.0.98" }
base64 = { version = "0.22" }
bytes = { version = "1.9.0" }
clap = { version = "4.5.43", features = ["derive", "env", "string"] }
colored = { version = "2.1" }
csv = { version = "1.3" }
ed25519-dalek = { version = "2.1" }
futures = { version = "0.3" }
hex = { version = "0.4" }
http = { version = "0.2" }
hyper = { version = "0.14", features = ["full"] }
hyper-noise = { version = "0.0.2" }
mime_guess = { version = "2.0" }
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }
rand = { version = "0.8" }
reqwest = { version = "0.12", features = ["json"] }
rust-embed = { version = "8.5" }
secp256k1 = { version = "0.24.3", features = ["rand-std"] }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = { version = "0.5.1" }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = { version = "2.0" }
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
tokio-noise = { version = "0.0.4" }
tokio-stream = { version = "0.1" }
toml = { version = "0.8" }
tonic = { version = "0.14.2" }
tonic-prost = { version = "0.14.2" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-actix-web = { version = "0.1" }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
uuid = { version = "1.11", features = ["v4"] }
x509-parser = { version = "0.16" }

canton-proto-rs = { git = "ssh://git@github.com/DLC-link/canton-lib", branch = "main" }
keycloak = { git = "ssh://git@github.com/DLC-link/canton-lib", branch = "main" }

[dev-dependencies]
tempfile = { version = "3.14" }
