[package]
name = "dec-party-manager"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
strip = "debuginfo"
codegen-units = 1
lto = true
panic = "unwind"

# CI-only profile for integration tests. Inherits release-level optimizations
# but disables LTO and bumps codegen-units so the build finishes in a fraction
# of the time. The shipped release profile is unaffected.
[profile.release-ci]
inherits = "release"
codegen-units = 16
lto = false
strip = "none"

[features]
# Compile-time gate for the permissive `MockValidator` (admin-by-default,
# accepts any token) and `MockAuthRegistry`. Enabled automatically under
# `cargo test`. Production builds must NOT enable this: leaving it off
# means the mock types are not compiled in at all, so the binary cannot
# select mock auth at runtime.
test-mode = []

[dependencies]
actix-cors = { version = "0.7" }
actix-web = { version = "4" }
aes-gcm = { version = "0.10" }
anyhow = { version = "1.0.98" }
base64 = { version = "0.22" }
bytes = { version = "1.11.1" }
clap = { version = "4.5.43", features = ["derive", "env", "string"] }
colored = { version = "3.1.1" }
dotenvy = { version = "0.15" }
ed25519-dalek = { version = "2.1", features = ["zeroize"] }
futures = { version = "0.3" }
hex = { version = "0.4" }
http = { version = "0.2" }
hyper = { version = "0.14", features = ["full"] }
hyper-noise = { version = "0.0.2" }
jsonwebtoken = { version = "10.4", features = ["aws_lc_rs"] }
mime_guess = { version = "2.0" }
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }
rand = { version = "0.10" }
reqwest = { version = "0.13", features = ["form", "json"] }
rust-embed = { version = "8.5" }
secp256k1 = { version = "0.29.1", features = ["rand-std"] }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = { version = "0.5.1" }
serde_json = { version = "1.0" }
sha2 = { version = "0.11" }
sqlx = { version = "0.8", default-features = false, features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
thiserror = { version = "2.0" }
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync"] }
tokio-noise = { version = "0.0.4" }
tokio-stream = { version = "0.1" }
tonic = { version = "0.14.2" }
tonic-prost = { version = "0.14.2" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-actix-web = { version = "0.1" }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
uuid = { version = "1.11", features = ["v4"] }
x509-parser = { version = "0.18" }
zeroize = { version = "1.8", features = ["derive"] }

canton-common = { package = "common", git = "ssh://git@github.com/DLC-link/canton-lib", branch = "main" }
canton-proto-rs = { git = "ssh://git@github.com/DLC-link/canton-lib", branch = "main" }
canton-registry = { package = "registry", git = "ssh://git@github.com/DLC-link/canton-lib", branch = "main" }
keycloak = { git = "ssh://git@github.com/DLC-link/canton-lib", branch = "main" }

[dev-dependencies]
static_assertions = { version = "1.1" }
tempfile = { version = "3.14" }
wiremock = { version = "0.6" }
