[package]
name = "decman-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
common = { workspace = true }
dotenvy = { workspace = true }
ratatui = { workspace = true }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
